@@ -1,26 +1,10 @@
 # vim: set ft=bash sw=3 ts=3 expandtab:
-# runscript: customized=true
 
 help_release() {
-   echo "- run release: Release a specific version and tag the code"
+   echo "- run release: Tag and release the code, triggering GHA to publish artifacts"
 }
 
 task_release() {
-   local version
-
    run_command tagrelease "$@"
-   run_task build
-
-   version=$(poetry version --short)
-   echo ""
-   echo "*** Version v$version has been released and committed"
-   echo ""
-   echo "Next, push: git push --follow-tags"
-   echo ""
-   echo "Then go to: https://github.com/pronovic/smartapp-sensortrack/releases/tag/v$version"
-   echo ""
-   echo "Convert the tag to a release and attach build artifacts:"
-   ls -l dist
-   echo ""
 }
 
